bugfix: contact icon misalignment

--- a/sass/partials/_contact.scss
+++ b/sass/partials/_contact.scss
@@ -32,6 +32,9 @@
       transform: translateY(-50%);
       transition: all .25s;
       @include filter(grayscale(100%) contrast(0));
+      @include mobile {
+        position: relative;
+      }
     }
     @include mobile {
       display: flex;
@@ -40,7 +43,7 @@
       }
     }
     @include tablet {
-      
+
     }
     span {
       color: $black;
@@ -51,6 +54,9 @@
       margin-left: $icon-size + $spacing2;
       border-bottom: solid 1px $black-lightest;
       transition: all .25s;
+      @include mobile {
+        margin-left: $spacing2;
+      }
     }
     a {
       position: absolute;
